tests/e2e/fail/array_data_field.ep
# COMPILE_ERROR: type u8[] has no field 'data'
fun main(): void {
    let values = new u8[]
    let data = values.data
    os.ExitProcess(is_null(data))
}
